--- a/core/configure.ac.in
+++ b/core/configure.ac.in
@@ -124,35 +124,6 @@ fi
 if test "$enable_odccm_support" = "yes"; then odccm=1; else odccm=0; fi
 AC_DEFINE_UNQUOTED(ENABLE_ODCCM_SUPPORT, $odccm, [Define to 1 if you want odccm support.])
 
-dnl
-dnl whether hal dbus support is required
-dnl
-AC_ARG_ENABLE(hal-support,
-              [  --enable-hal-support  enable hal support (requires D-Bus)],
-              enable_hal_support=$enableval, enable_hal_support=no)
-
-if ! test "$enable_hal_support" = "no"; then
-  dnl Check for DBus and Hal
-  PKG_CHECK_MODULES(HAL, [hal >= 0.5.8], hal_found=yes, hal_found=no)
-
-  if test "$hal_found" = "no" || test "$dbus_found" = "no"; then
-    if test "$enable_hal_support" = "auto"; then
-      AC_MSG_NOTICE([Hal not found, building without hal support])
-      enable_hal_support=no
-    else
-      AC_MSG_ERROR([Hal support requested but hal could not be found])
-    fi
-  else
-    AC_MSG_NOTICE([Building with hal support])
-    AC_DEFINE(ENABLE_HAL_SUPPORT, 1, [Define if building with hal support])
-    enable_hal_support=yes
-  fi
-else
-  AC_MSG_NOTICE([Building without hal support])
-fi
-
-if test "$enable_hal_support" = "yes"; then hal=1; else hal=0; fi
-AC_DEFINE_UNQUOTED(ENABLE_HAL_SUPPORT, $hal, [Define to 1 if you want hal support.])
 
 dnl
 dnl whether dbus support for udev is required
@@ -184,67 +155,30 @@ AC_DEFINE_UNQUOTED(ENABLE_UDEV_SUPPORT, $udev, [Define to 1 if you want udev sup
 
 
 
-# do we use hal or udev for dccm ?
-AC_ARG_ENABLE(udev, AC_HELP_STRING([--enable-hal-dccm], [Build dccm for hal (default udev)]),enable_udev="$enableval",enable_udev=yes)
-AM_CONDITIONAL(USE_HAL, test "x$enable_udev" = "xno")
-if test "x$enable_udev" = "xno"; then
-    AC_MSG_NOTICE([Building dccm for HAL])
-    AC_DEFINE(USE_HAL, 1, [Build using hal])
+# check for libgudev setup
+PKG_CHECK_MODULES(GUDEV, gudev-1.0, have_gudev=1, have_gudev=0)
+AC_DEFINE_UNQUOTED(HAVE_GUDEV, $have_gudev, [Define to 1 for libgudev support.])
 
-    dnl Check for HAL
-    PKG_CHECK_MODULES(HAL, hal)
+PKG_CHECK_MODULES(UDEV, udev)
 
-    dnl Check for override of default hal addon dir
-    AC_MSG_CHECKING([hal addon dir])
-    AC_ARG_WITH(hal-addon-dir, [  --with-hal-addon-dir=PATH     Location of the hal addon scripts.],
-	       with_hal_addon_dir="$withval", with_hal_addon_dir="no")
-    if test "x${with_hal_addon_dir}" = "xno"; then
-        hal_addon_dir="`pkg-config --variable=libdir hal`/hal/scripts"
-
-        hald_test_output=`hald --daemon=no 2>&1 | grep 'allowed paths' | grep "$hal_addon_dir"`
-        if test $? -ne 0
-        then
-            AC_MSG_ERROR([Automatically determined hal script location ${hal_addon_dir} not in allowed paths, use --with-hal-addon-dir])
-        fi
-        AC_MSG_RESULT([$hal_addon_dir])
-    else
-        hal_addon_dir="$with_hal_addon_dir"
-
-        hald_test_output=`hald --daemon=no 2>&1 | grep 'allowed paths' | grep "$hal_addon_dir"`
-        if test $? -ne 0
-        then
-            AC_MSG_WARN([Specified hal script location ${hal_addon_dir} not in allowed paths])
-        else
-            AC_MSG_RESULT([$hal_addon_dir])
-        fi
-    fi
-    AC_SUBST(hal_addon_dir)
-else
-    AC_MSG_NOTICE([Building dccm for Udev])
-    PKG_CHECK_MODULES(GUDEV, gudev-1.0, have_gudev=1, have_gudev=0)
-    AC_DEFINE_UNQUOTED(HAVE_GUDEV, $have_gudev, [Define to 1 for libgudev support.])
-
-    PKG_CHECK_MODULES(UDEV, udev)
-
-    dnl Find the path to udevadm
-    AC_PATH_PROG([UDEVADMPATH], [udevadm], [no])
-    if test "x$UDEVADMPATH" = "xno"; then
-       	AC_MSG_ERROR([Failed to find udevadm in PATH, is it installed ?])
-    fi
-
-    dnl Check for override of default udev dir
-    AC_MSG_CHECKING([udev dir])
-    AC_ARG_WITH(udev-dir, [  --with-udev-dir=PATH     Location of the udev config.],
-	       with_udev_dir="$withval", with_udev_dir="no")
-    if test "x${with_udev_dir}" = "xno"; then
-        udev_dir="`pkg-config --variable=udevdir udev`"
-        AC_MSG_RESULT([$udev_dir])
-    else
-        udev_dir="$with_udev_dir"
-        AC_MSG_RESULT([$udev_dir])
-    fi
-    AC_SUBST(udev_dir)
+dnl Find the path to udevadm
+AC_PATH_PROG([UDEVADMPATH], [udevadm], [no])
+if test "x$UDEVADMPATH" = "xno"; then
+    AC_MSG_ERROR([Failed to find udevadm in PATH, is it installed ?])
 fi
+
+dnl Check for override of default udev dir
+AC_MSG_CHECKING([udev dir])
+AC_ARG_WITH(udev-dir, [  --with-udev-dir=PATH     Location of the udev config.],
+       with_udev_dir="$withval", with_udev_dir="no")
+if test "x${with_udev_dir}" = "xno"; then
+    udev_dir="`pkg-config --variable=udevdir udev`"
+    AC_MSG_RESULT([$udev_dir])
+else
+    udev_dir="$with_udev_dir"
+    AC_MSG_RESULT([$udev_dir])
+fi
+AC_SUBST(udev_dir)
 
 
 AC_ARG_ENABLE(bluetooth-support, AC_HELP_STRING([--enable-bluetooth-support], [Build in bluetooth support]),enable_bluetooth_support="$enableval",enable_bluetooth_support=no)
@@ -434,17 +368,12 @@ AC_CONFIG_FILES(
 
 AC_CONFIG_FILES([
         scripts/synceconnector.py \
-        scripts/hal-synce-rndis \
-        scripts/hal-synce-serial \
         scripts/udev-synce-rndis \
         scripts/udev-synce-serial \
         scripts/synce-udev-rndis \
         scripts/synce-udev-serial \
         scripts/synce-serial \
         scripts/85-synce.rules \
-        bluetooth/hal-synce-bluetooth \
-        bluetooth/synce-hal-bt-ipup \
-        bluetooth/synce-hal-bt-ipdown \
         bluetooth/synce-udev-bt-ipup \
         etc/org.synce.dccm.service \
         etc/synce-connector.conf] )
