--- a/core/lib/utils/synce.h.in
+++ b/core/lib/utils/synce.h.in
@@ -166,7 +166,7 @@ const char* synce_strerror(DWORD error);
 
 /*
  * Info from the ~/.synce/active_connection file
- * written by (v)dccm, or obtained over dbus from odccm or hal-dccm
+ * written by (v)dccm, or obtained over dbus from odccm or dccm
  */
 
 typedef struct _SynceInfo SynceInfo;
