--- a/trunk/core/lib/Makefile.am
+++ b/trunk/core/lib/Makefile.am
@@ -3,7 +3,7 @@
 lib_LTLIBRARIES = libsynce.la
 libsynce_la_SOURCES = 
 libsynce_la_LDFLAGS = -no-undefined -version-info 0:0:0
-libsynce_la_LIBADD  = -lm @LTLIBICONV@ @DBUS_LIBS@ @HAL_LIBS@ \
+libsynce_la_LIBADD  = -lm @LTLIBICONV@ @DBUS_LIBS@ \
 		$(top_builddir)/lib/utils/libutils.la \
 		$(top_builddir)/lib/rapi/librapi.la
 
