--- a/trunk/gvfs/configure.ac.in
+++ b/trunk/gvfs/configure.ac.in
@@ -79,6 +79,7 @@ fi
 AM_CONDITIONAL(GVFS_VERSION_1_0, test "$gvfs_major_ver" -ge 1 )
 AM_CONDITIONAL(GVFS_VERSION_1_2, test "$gvfs_major_ver" -ge 1 -a "$gvfs_minor_ver" -ge 2 )
 AM_CONDITIONAL(GVFS_VERSION_1_4, test "$gvfs_major_ver" -ge 1 -a "$gvfs_minor_ver" -ge 4 )
+AM_CONDITIONAL(GVFS_VERSION_1_14, test "$gvfs_major_ver" -ge 1 -a "$gvfs_minor_ver" -ge 14 )
 
 AC_ARG_ENABLE(update-mime-database,
         AC_HELP_STRING([--disable-update-mime-database],
