--- a/trunk/core/tests/CeRapiInvoke/Makefile.am
+++ b/trunk/core/tests/CeRapiInvoke/Makefile.am
@@ -1,5 +1,5 @@
-AM_CXXFLAGS = -I$(top_srcdir)/lib/utils -Wall
-AM_CFLAGS = -I$(top_srcdir)/lib/utils -Wall
+AM_CXXFLAGS = -I$(top_srcdir)/lib/utils -I$(top_builddir)/lib/utils -Wall
+AM_CFLAGS = -I$(top_srcdir)/lib/utils -I$(top_builddir)/lib/utils -Wall
 AM_LDFLAGS = $(top_builddir)/lib/libsynce.la
 
 INCLUDES = -I$(top_srcdir)/lib/rapi
