--- a/trunk/core/tests/rapi/Makefile.am
+++ b/trunk/core/tests/rapi/Makefile.am
@@ -1,4 +1,4 @@
-AM_CXXFLAGS = -I$(top_srcdir)/lib/utils -Wall
+AM_CXXFLAGS = -I$(top_srcdir)/lib/utils -I$(top_builddir)/lib/utils -Wall
 AM_LDFLAGS = $(top_builddir)/lib/libsynce.la
 
 INCLUDES = -I$(top_srcdir)/lib/rapi -I$(top_srcdir)/lib/rapi/support
