migrate all command line tools to use rapi2 API

--- a/core/lib/utils/synce.h.in
+++ b/core/lib/utils/synce.h.in
@@ -173,6 +173,7 @@ bool synce_get_script_directory(char** directory);
  */
 
 const char* synce_strerror(DWORD error);
+const char* synce_strerror_from_hresult(HRESULT hr);
 
 
 /*
