--- a/librtfcomp/configure.in
+++ b/librtfcomp/configure.in
@@ -1,5 +1,6 @@
 AC_PREREQ(2.53)
 AC_INIT([librtfcomp], [1.2])
+AC_CONFIG_SRCDIR(src/rtfcomp.c)
 AM_INIT_AUTOMAKE([1.9 foreign])
 
 AC_PROG_CC
@@ -69,7 +70,30 @@ else
 	    if test x$have_python = xno ; then
 	        if test x$enable_python = xyes ; then
 	            AC_MSG_ERROR([Building python explicitly requested, but can't build python bindings])
+	        else
+	            AC_MSG_NOTICE([Not building Python bindings])
 	        fi
+	    else
+
+dnl # require at least pyrex 0.9.6
+
+		AC_MSG_CHECKING([pyrex version])
+
+		pyrex_ver=`$PYREX --version 2>&1 | sed -e 's/Pyrex version //'`
+	 	`echo "$pyrex_ver" | awk 'BEGIN { FS = "."; } { printf "export pyrex_maj_ver=%s export pyrex_min_ver=%s export pyrex_sub_ver=%s", $1, $2, $3;}'`
+
+		if test "$pyrex_min_ver" -lt 9 || test "$pyrex_sub_ver" -lt 6 ; then
+		    AC_MSG_RESULT([$pyrex_ver])
+		    if test x$enable_python = xyes ; then
+			AC_MSG_ERROR([Building python explicitly requested, but can't build python bindings, need at least pyrex 0.9.6])
+		    else
+			AC_MSG_NOTICE([Not building Python bindings, need at least pyrex 0.9.6])
+			have_python=no
+	            fi
+    		else
+		    AC_MSG_RESULT([ok])
+    		fi
+
 	    fi
 	fi
 fi
