--- a/trunk/core/configure.ac.in
+++ b/trunk/core/configure.ac.in
@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_PREREQ(2.53)
 
-AC_INIT(synce-core, @@YOU_DID_NOT_RUN_THE_BOOTSTRAP_SCRIPT@@)
+AC_INIT(SynCE Core, @@YOU_DID_NOT_RUN_THE_BOOTSTRAP_SCRIPT@@)
 AC_CONFIG_HEADERS(config.h)
 AC_CONFIG_SRCDIR(lib/utils/synce.h.in)
 
