--- a/core/configure.ac.in
+++ b/core/configure.ac.in
@@ -76,7 +76,8 @@ PKG_CHECK_MODULES(GLIB, [glib-2.0 >= 2.7, gobject-2.0 >= 2.4, gio-2.0 >= 2.22, g
 dnl Check for D-Bus
 PKG_CHECK_MODULES(DBUS, [dbus-1 >= 0.60, dbus-glib-1 >= 0.74], dbus_found=yes, dbus_found=no)
 
-
+dnl Check if GLib version is high enough for GDBus
+PKG_CHECK_EXISTS([gio-2.0 >= 2.26], have_gdbus=yes, have_gdbus=no)
 
 dnl
 dnl whether to build documentation
@@ -202,6 +203,18 @@ else
     AC_MSG_RESULT([$udev_dir])
 fi
 AC_SUBST(udev_dir)
+
+dnl Should we build with GDBus ?
+AC_MSG_CHECKING([whether to use GDBus])
+if test "x$enable_udev" != "xno" -a "$have_gdbus" = "yes"; then
+   use_gdbus=1;
+   AC_MSG_RESULT([yes])
+else
+   use_gdbus=0;
+   AC_MSG_RESULT([no])
+fi
+AC_DEFINE_UNQUOTED(USE_GDBUS, $use_gdbus, [Define to 1 if you want to use GDBus support.])
+AM_CONDITIONAL(USE_GDBUS, test "x$use_gdbus" = "x1")
 
 
 AC_ARG_ENABLE(bluetooth-support, AC_HELP_STRING([--enable-bluetooth-support], [Build in bluetooth support]),enable_bluetooth_support="$enableval",enable_bluetooth_support=no)
