--- a/core/configure.ac.in
+++ b/core/configure.ac.in
@@ -73,11 +73,23 @@ AC_LIB_RPATH
 dnl Check for GLib
 PKG_CHECK_MODULES(GLIB, [glib-2.0 >= 2.7, gobject-2.0 >= 2.4, gio-2.0 >= 2.22, gio-unix-2.0 >= 2.22])
 
-dnl Check for D-Bus
-PKG_CHECK_MODULES(DBUS, [dbus-1 >= 0.60, dbus-glib-1 >= 0.74], dbus_found=yes, dbus_found=no)
+dnl Check for D-Bus, we need dbus-1 for config file locations
+dnl irrespective of which dbus library we use
+PKG_CHECK_MODULES(DBUS, [dbus-1 >= 0.60], dbus_found=yes, dbus_found=no)
+PKG_CHECK_MODULES(DBUS, [dbus-glib-1 >= 0.74], dbusglib_found=yes, dbusglib_found=no)
 
 dnl Check if GLib version is high enough for GDBus
+AC_MSG_CHECKING([whether to use GDBus])
 PKG_CHECK_EXISTS([gio-2.0 >= 2.26], have_gdbus=yes, have_gdbus=no)
+if test "$have_gdbus" = "yes"; then
+   use_gdbus=1;
+   AC_MSG_RESULT([yes])
+else
+   use_gdbus=0;
+   AC_MSG_RESULT([no])
+fi
+AC_DEFINE_UNQUOTED(USE_GDBUS, $use_gdbus, [Define to 1 if you want to use GDBus support.])
+AM_CONDITIONAL(USE_GDBUS, test "x$use_gdbus" = "x1")
 
 dnl
 dnl whether to build documentation
@@ -129,12 +141,12 @@ AC_ARG_ENABLE(odccm-support,
 
 if ! test "$enable_odccm_support" = "no"; then
   dnl do we have dbus ?
-  if test "$dbus_found" = "no"; then
+  if test "$use_gdbus" = "no" -a "$dbusglib_found" = "no"; then
     if test "$enable_odccm_support" = "auto"; then
-      AC_MSG_NOTICE([D-Bus not found, building without odccm support])
+      AC_MSG_NOTICE([D-Bus Glib not found, building without odccm support])
       enable_odccm_support=no
     else
-      AC_MSG_ERROR([odccm support requested but D-Bus could not be found])
+      AC_MSG_ERROR([odccm support requested but D-Bus Glib could not be found])
     fi
   else
     AC_MSG_NOTICE([Building with odccm support])
@@ -157,8 +169,16 @@ AC_ARG_ENABLE(udev-support,
               enable_udev_support=$enableval, enable_udev_support=yes)
 
 if ! test "$enable_udev_support" = "no"; then
+  dnl do we have dbus library support ?
+  if test "$use_gdbus" = "no" -a "$dbusglib_found" = "no"; then
+    if test "$enable_udev_support" = "auto"; then
+      AC_MSG_NOTICE([D-Bus Glib not found, building without udev support])
+      enable_udev_support=no
+    else
+      AC_MSG_ERROR([udev support requested but D-Bus Glib could not be found])
+    fi
   dnl do we have dbus ?
-  if test "$dbus_found" = "no"; then
+  elif test "$dbus_found" = "no"; then
     if test "$enable_udev_support" = "auto"; then
       AC_MSG_NOTICE([D-Bus not found, building without udev support])
       enable_udev_support=no
@@ -176,7 +196,7 @@ fi
 
 if test "$enable_udev_support" = "yes"; then udev=1; else udev=0; fi
 AC_DEFINE_UNQUOTED(ENABLE_UDEV_SUPPORT, $udev, [Define to 1 if you want udev support.])
-
+AM_CONDITIONAL(ENABLE_UDEV, test "x$udev" = "x1")
 
 
 # check for libgudev setup
@@ -203,18 +223,6 @@ else
     AC_MSG_RESULT([$udev_dir])
 fi
 AC_SUBST(udev_dir)
-
-dnl Should we build with GDBus ?
-AC_MSG_CHECKING([whether to use GDBus])
-if test "x$enable_udev" != "xno" -a "$have_gdbus" = "yes"; then
-   use_gdbus=1;
-   AC_MSG_RESULT([yes])
-else
-   use_gdbus=0;
-   AC_MSG_RESULT([no])
-fi
-AC_DEFINE_UNQUOTED(USE_GDBUS, $use_gdbus, [Define to 1 if you want to use GDBus support.])
-AM_CONDITIONAL(USE_GDBUS, test "x$use_gdbus" = "x1")
 
 
 AC_ARG_ENABLE(bluetooth-support, AC_HELP_STRING([--enable-bluetooth-support], [Build in bluetooth support]),enable_bluetooth_support="$enableval",enable_bluetooth_support=no)
