--- a/trayicon/configure.ac.in
+++ b/trayicon/configure.ac.in
@@ -37,6 +37,19 @@ dnl Check for D-Bus
 PKG_CHECK_MODULES(DBUS, [dbus-1 >= 0.61, dbus-glib-1 >= 0.61],
                     dbus=yes, dbus=no)
 
+dnl Check if GLib version is high enough for GDBus
+AC_MSG_CHECKING([whether to use GDBus])
+PKG_CHECK_EXISTS([gio-2.0 >= 2.26], have_gdbus=yes, have_gdbus=no)
+if test "$have_gdbus" = "yes"; then
+   use_gdbus=1;
+   AC_MSG_RESULT([yes])
+else
+   use_gdbus=0;
+   AC_MSG_RESULT([no])
+fi
+AC_DEFINE_UNQUOTED(USE_GDBUS, $use_gdbus, [Define to 1 if you want to use GDBus support.])
+AM_CONDITIONAL(USE_GDBUS, test "x$use_gdbus" = "x1")
+
 dnl Check for Gnome Keyring
 PKG_CHECK_MODULES(GNOME_KEYRING, gnome-keyring-1)
 AC_SUBST(GNOME_KEYRING_CFLAGS)
@@ -116,9 +129,18 @@ AC_ARG_ENABLE(odccm-support,
               enable_odccm_support=$enableval, enable_odccm_support=no)
 
 if ! test "$enable_odccm_support" = "no"; then
-  AC_MSG_NOTICE([Building with odccm support])
-  AC_DEFINE(ENABLE_ODCCM_SUPPORT, 1, [Define if building with odccm support])
-  enable_odccm_support=yes
+  if test "$use_gdbus" = "0" -a "$dbusglib_found" = "no"; then
+    if test "$enable_odccm_support" = "auto"; then
+      AC_MSG_NOTICE([D-Bus Glib not found, building without odccm support])
+      enable_odccm_support=no
+    else
+      AC_MSG_ERROR([odccm support requested but D-Bus Glib could not be found])
+    fi
+  else
+    AC_MSG_NOTICE([Building with odccm support])
+    AC_DEFINE(ENABLE_ODCCM_SUPPORT, 1, [Define if building with odccm support])
+    enable_odccm_support=yes
+  fi
 else
   AC_MSG_NOTICE([Building without odccm support])
 fi
@@ -134,9 +156,18 @@ AC_ARG_ENABLE(udev-support,
               enable_udev_support=$enableval, enable_udev_support=yes)
 
 if ! test "$enable_udev_support" = "no"; then
-  AC_MSG_NOTICE([Building with udev support])
-  AC_DEFINE(ENABLE_UDEV_SUPPORT, 1, [Define if building with udev support])
-  enable_udev_support=yes
+  if test "$use_gdbus" = "0" -a "$dbusglib_found" = "no"; then
+    if test "$enable_udev_support" = "auto"; then
+      AC_MSG_NOTICE([D-Bus Glib not found, building without udev support])
+      enable_udev_support=no
+    else
+      AC_MSG_ERROR([udev support requested but D-Bus Glib could not be found])
+    fi
+  else
+    AC_MSG_NOTICE([Building with udev support])
+    AC_DEFINE(ENABLE_UDEV_SUPPORT, 1, [Define if building with udev support])
+    enable_udev_support=yes
+  fi
 else
   AC_MSG_NOTICE([Building without udev support])
 fi
