--- a/trayicon/configure.ac.in
+++ b/trayicon/configure.ac.in
@@ -21,12 +21,13 @@ PKG_CHECK_MODULES(LIBSYNCE, libsynce >= 0.17)
 dnl Check for librra
 PKG_CHECK_MODULES(LIBRRA, librra >= 0.17)
 
-PKG_CHECK_MODULES(GTK2, glib-2.0       \
-			gmodule-2.0    \
-			gtk+-2.0 >= 2.16)
+PKG_CHECK_MODULES(GLIB2, [glib-2.0 gmodule-2.0])
+AC_SUBST(GLIB2_CFLAGS)
+AC_SUBST(GLIB2_LIBS)
 
-AC_SUBST(GTK2_CFLAGS)
-AC_SUBST(GTK2_LIBS)
+PKG_CHECK_MODULES(GTK3, gtk+-3.0)
+AC_SUBST(GTK3_CFLAGS)
+AC_SUBST(GTK3_LIBS)
 
 PKG_CHECK_MODULES(GCONF, gconf-2.0)
 
@@ -74,16 +75,16 @@ AC_ARG_ENABLE(appindicator,
                         [enable_appindicator="auto"])
 
 if test x$enable_appindicator = xauto ; then
-        PKG_CHECK_EXISTS([appindicator-0.1 >= $APPINDICATOR_REQUIRED],
+        PKG_CHECK_EXISTS([appindicator3-0.1 >= $APPINDICATOR_REQUIRED],
                          enable_appindicator="yes",
                          enable_appindicator="no")
 fi
 
 if test x$enable_appindicator = xyes ; then
-        PKG_CHECK_EXISTS([appindicator-0.1 >= $APPINDICATOR_REQUIRED],,
+        PKG_CHECK_EXISTS([appindicator3-0.1 >= $APPINDICATOR_REQUIRED],,
                          AC_MSG_ERROR([appindicator-0.1 is not installed]))
         PKG_CHECK_MODULES(APP_INDICATOR,
-                        appindicator-0.1 >= $APPINDICATOR_REQUIRED)
+                        appindicator3-0.1 >= $APPINDICATOR_REQUIRED)
         AC_SUBST(APP_INDICATOR_CFLAGS)
         AC_SUBST(APP_INDICATOR_LIBS)
         AC_DEFINE(HAVE_APP_INDICATOR, 1, [Have AppIndicator])
