build with gtk3

--- a/gcemirror/configure.ac.in
+++ b/gcemirror/configure.ac.in
@@ -19,10 +19,13 @@ AM_PROG_CC_C_O
 dnl Check for librapi2
 PKG_CHECK_MODULES(LIBSYNCE, libsynce >= 0.16)
 
-PKG_CHECK_MODULES(GTK2, glib-2.0       \
-			gtk+-2.0 >= 2.18)
-AC_SUBST(GTK2_CFLAGS)
-AC_SUBST(GTK2_LIBS)
+PKG_CHECK_MODULES(GLIB2, glib-2.0)
+AC_SUBST(GLIB2_CFLAGS)
+AC_SUBST(GLIB2_LIBS)
+
+PKG_CHECK_MODULES(GTK3, gtk+-3.0)
+AC_SUBST(GTK3_CFLAGS)
+AC_SUBST(GTK3_LIBS)
 
 dnl Checks for header files.
 
