migrate from gconf to gsettings

--- a/trayicon/data/Makefile.am
+++ b/trayicon/data/Makefile.am
@@ -6,38 +6,13 @@ gladedir = $(datadir)/synce/
 glade_DATA = synce_trayicon_properties.glade
 
 ##############
-# GConf schema
+# GSettings schema
 ##############
-schemadir = $(GCONF_SCHEMA_FILE_DIR)
-schema_in_files = synce-trayicon.schemas.in
-schema_DATA = $(schema_in_files:.schemas.in=.schemas)
-@INTLTOOL_SCHEMAS_RULE@
+# gsettings_SCHEMAS is a list of all the schemas you want to install
+gsettings_SCHEMAS = org.synce.SynceTrayicon.gschema.xml
 
-if GCONF_SCHEMAS_INSTALL
-gconf_schema_install = "GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $(schema_DATA)"
-
-install-data-hook:
-	@-if test -z "$(DESTDIR)"; then \
-		echo "Installing GConf schemas"; \
-		-$(gconf_schema_install); \
-	else \
-		echo "*** GConf schema not installed. After install, run this:"; \
-		echo "***   $(gconf_schema_install)"; \
-	fi
-endif
-
-if GCONF_SCHEMAS_INSTALL
-gconf_schema_uninstall = "GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) $(GCONFTOOL) --makefile-uninstall-rule $(schema_DATA)"
-
-uninstall-hook:
-	@-if test -z "$(DESTDIR)"; then \
-		echo "Uninstalling GConf schemas"; \
-		-$(gconf_schema_install); \
-	else \
-		echo "*** GConf schema not uninstalled. After uninstall, run this:"; \
-		echo "***   $(gconf_schema_uninstall)"; \
-	fi
-endif
+# include the appropriate makefile rules for schema handling
+@GSETTINGS_RULES@
 
 ############################
 # Desktop and autostart file
@@ -58,12 +33,11 @@ autostart_DATA = $(autostart_in_files:.desktop.in=.desktop)
 
 EXTRA_DIST = \
 	$(glade_DATA) \
-	$(schema_in_files) \
+	$(gsettings_SCHEMAS) \
 	$(desktop_in_in_files) \
 	$(autostart_in_in_files)
 
 
 DISTCLEANFILES = \
-	$(schema_DATA) \
 	$(desktop_DATA) \
 	$(autostart_DATA)
