--- a/trayicon/configure.ac.in
+++ b/trayicon/configure.ac.in
@@ -21,18 +21,14 @@ PKG_CHECK_MODULES(LIBSYNCE, libsynce >= 0.17)
 dnl Check for librra
 PKG_CHECK_MODULES(LIBRRA, librra >= 0.17)
 
-PKG_CHECK_MODULES(GLIB2, [glib-2.0 gmodule-2.0])
+PKG_CHECK_MODULES(GLIB2, [glib-2.0 gmodule-2.0 gio-2.0 >= 2.26])
 AC_SUBST(GLIB2_CFLAGS)
 AC_SUBST(GLIB2_LIBS)
+GLIB_GSETTINGS
 
 PKG_CHECK_MODULES(GTK3, gtk+-3.0)
 AC_SUBST(GTK3_CFLAGS)
 AC_SUBST(GTK3_LIBS)
-
-PKG_CHECK_MODULES(GCONF, gconf-2.0)
-
-AC_PATH_PROG(GCONFTOOL, gconftool-2)
-AM_GCONF_SOURCE_2
 
 dnl Check for D-Bus
 PKG_CHECK_MODULES(DBUS, [dbus-1 >= 0.61, dbus-glib-1 >= 0.61],
