migrate to RAPI2, update cmake use of pkgconfig to allow version check on libsynce

--- a/kde4-kio-rapip/CMakeLists.txt
+++ b/kde4-kio-rapip/CMakeLists.txt
@@ -18,12 +18,12 @@ include (CPack)
 
 # search packages used by KDE
 find_package(KDE4 REQUIRED)
-include (UsePkgConfig)
+include (FindPkgConfig)
 include (KDE4Defaults)
 include (MacroLibrary)
 include(MacroOptionalAddSubdirectory)
 
-PKGCONFIG(libsynce SYNCE_INCLUDE_DIR SYNCE_LINK_DIR SYNCE_LINK_FLAGS SYNCE_CFLAGS)
+pkg_check_modules(SYNCE libsynce>=0.17)
 
 add_definitions (${SYNCE_CFLAGS} ${QT_DEFINITIONS} ${KDE4_DEFINITIONS})
 include_directories (${SYNCE_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR} ${KDE4_INCLUDES})
