--- a/kde4-kio-rapip/src/CMakeLists.txt
+++ b/kde4-kio-rapip/src/CMakeLists.txt
@@ -3,7 +3,7 @@ set(kio_rapip_SRCS
 )
 
 kde4_add_plugin(kio_rapip ${kio_rapip_SRCS})
-target_link_libraries(kio_rapip ${SYNCE_LINK_FLAGS} ${KDE4_KIO_LIBS})
+target_link_libraries(kio_rapip ${SYNCE_LDFLAGS} ${KDE4_KIO_LIBS})
 install(TARGETS kio_rapip DESTINATION ${PLUGIN_INSTALL_DIR})
 
 install( FILES synce.protocol rapip.protocol DESTINATION ${SERVICES_INSTALL_DIR} )
