initial code for volume monitor

--- a/gvfs/configure.ac.in
+++ b/gvfs/configure.ac.in
@@ -157,4 +157,7 @@ AC_OUTPUT([
 	gvfs/Makefile
 	gvfs/common/Makefile
 	gvfs/daemon/Makefile
+	gvfs/monitor/Makefile
+	gvfs/monitor/proxy/Makefile
+	monitor/Makefile
 ])
