rename command line tools to begin with synce-

--- a/core/man/man1/Makefile.am
+++ b/core/man/man1/Makefile.am
@@ -1,15 +1,15 @@
 man_MANS = \
-	pcp.1 \
-	pkillall.1 \
-	pls.1 \
-	pmkdir.1 \
-	pmv.1 \
-	prm.1 \
-	prmdir.1 \
-	prun.1 \
-	psettime.1 \
-	pshortcut.1 \
-	pstatus.1 \
+	synce-pcp.1 \
+	synce-pkillall.1 \
+	synce-pls.1 \
+	synce-pmkdir.1 \
+	synce-pmv.1 \
+	synce-prm.1 \
+	synce-prmdir.1 \
+	synce-prun.1 \
+	synce-psettime.1 \
+	synce-pshortcut.1 \
+	synce-pstatus.1 \
 	rapiconfig.1 \
 	synce-list-programs.1 \
 	synce-registry.1 \
