--- a/core/tools/synce-install-cab.in
+++ b/core/tools/synce-install-cab.in
@@ -16,16 +16,16 @@ fi
 # First, make sure that these directories exist
 #
 set +e
-@bindir@/pmkdir /Windows/AppMgr 2>/dev/null
-@bindir@/pmkdir /Windows/AppMgr/Install 2>/dev/null
+@bindir@/synce-pmkdir /Windows/AppMgr 2>/dev/null
+@bindir@/synce-pmkdir /Windows/AppMgr/Install 2>/dev/null
 
 set -e
 
 # copy the file to a special directory
 echo "Copying file '$1' to device..."
-@bindir@/pcp "$1" ":/Windows/AppMgr/Install/synce-install.cab"
+@bindir@/synce-pcp "$1" ":/Windows/AppMgr/Install/synce-install.cab"
 
 # run program that installs cab file in /Windows/AppMgr/Install
 echo "Installing '$1'..."
-@bindir@/prun wceload.exe
+@bindir@/synce-prun wceload.exe
 
