--- a/core/tests/rapi/Makefile.am
+++ b/core/tests/rapi/Makefile.am
@@ -1,7 +1,5 @@
-AM_CXXFLAGS = -I$(top_srcdir)/lib/utils -I$(top_builddir)/lib/utils -Wall
-AM_LDFLAGS = $(top_builddir)/lib/libsynce.la
+AM_CXXFLAGS = -I$(top_srcdir)/lib/utils -I$(top_builddir)/lib/utils -I$(top_srcdir)/lib/rapi -I$(top_srcdir)/lib/rapi/support -Wall
 
-INCLUDES = -I$(top_srcdir)/lib/rapi -I$(top_srcdir)/lib/rapi/support
 LDADD = $(top_builddir)/lib/libsynce.la
 
 noinst_PROGRAMS = \
